# cyber_top

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  cyber_top.md  gen_assets.py
.github/workflows/: release.yml
data/: cyber_top.db
docs/: architecture.md  codebase-map.md  data-model.md  design-workshop.md  design.md  map-items.md  ui-patterns.md
docs/zh/: architecture.md  codebase-map.md  data-model.md  design-workshop.md  design.md  map-items.md  ui-patterns.md
migrations/: 001_initial.sql  002_maps.sql
src/: assets_map.rs  main.rs
src/config/: tuning.rs
src/game/: collision.rs  combat.rs  components.rs  events.rs  hooks.rs  intent.rs  map.rs  mod.rs  physics.rs  tick.rs
src/game/arena/: circle.rs  floor.rs  mod.rs  obstacle.rs
src/game/parts/: chassis.rs  mod.rs  registry.rs  shaft.rs  trait_screw.rs  weapon_wheel.rs
src/game/stats/: base.rs  effective.rs  mod.rs  modifier.rs  types.rs
src/game/status/: effect.rs
src/plugins/: design_plugin.rs  game_plugin.rs  map_design_plugin.rs  menu_plugin.rs  mod.rs  storage_plugin.rs  ui_plugin.rs
src/storage/: mod.rs  repo.rs  sqlite_repo.rs
