[package]
name = "cyber_top"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
ron = "0.12.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["rt-multi-thread"] }

# Enable dynamic linking for faster compile times during development
[profile.dev.package."*"]
opt-level = 1

[profile.dev]
opt-level = 1
